--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(
+    to right,
+    rgba(8, 28, 83, 1) 0%,
+    rgba(0, 128, 183, 1) 100%
+  )
 }
 
 code {
